[gd_scene load_steps=4 format=2]

[ext_resource path="res://Systems/SceneManager.gd" type="Script" id=1]
[ext_resource path="res://MainScenes/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Sprites/BG.png" type="Texture" id=3]

[node name="SceneManager" type="Node"]
script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 256, 97 )
texture = ExtResource( 3 )

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[connection signal="change_scene" from="MainMenu" to="." method="on_change_scene"]
